--- a/src/app/pages/home/admin/admin.component.html
+++ b/src/app/pages/home/admin/admin.component.html
@@ -26,7 +26,7 @@
                     </tr>
                 </thead>
                 <tbody [hidden]="doneDeleteAllOnce" [@animateOut]="slideOut" (@animateOut.done)="endOfDeleteAllAnimation($event)">
-                    <tr *ngFor="let product of products" [@animateOut]="product.state" (@animateOut.done)="onEndDeleteProductAnimation()">
+                    <tr [hidden]="!product.visible" *ngFor="let product of products" [@animateOut]="product.state" (@animateOut.done)="onEndDeleteProductAnimation()">
                         <td>
                             <img src="{{ product.imagePath }}" alt="Nike shoe" width=100px />
                         </td>
